re PR c++/44366 ([C++0x] g++ crashes when declaring a lambda expression using a typedef'd decltype.)

PR c++/44366
	* error.c (dump_parameters): Mask out TFF_SCOPE.
	(dump_simple_decl): Don't print the scope of a PARM_DECL.
	(dump_scope): Remove no-op mask.

From-SVN: r160420